test/integration/bad/new/transformations-bad11.stan
data { vector<upper = + 0.0 while> x;}